# national_seismic_catalog_system

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: events.py  stations.py  usgs.py  waveforms.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: base.py
backend/app/schemas/: events.py  station.py  usgs.py  waveform.py
backend/app/services/pipeline/: context.py  orchestrator.py  queue.py
backend/app/services/processing/: associator.py  locator.py  magnitude.py  mechanism.py  phase_picker.py  result_types.py
backend/app/services/storage/: mseed.py  object_store.py
backend/app/services/streaming/: __init__.py  message_bus.py  publisher.py
backend/app/services/usgs/: __init__.py  client.py
backend/app/services/utils/: persistence.py
backend/tests/: test_app.py
